--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,19 +5,29 @@ spring.redis.ssl=false
 spring.data.redis.repositories.type=none
 spring.jackson.default-property-inclusion=non_null
 logging.level.web=debug
+
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
 nodo.connection.string=${NODO_CONNECTION_STRING}
+
 ecommerceSessions.uri=${ECOMMERCE_SESSIONS_URI}/sessions
 ecommerceSessions.readTimeout=${ECOMMERCE_SESSIONS_READ_TIMEOUT}
 ecommerceSessions.connectionTimeout=${ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT}
+
 paymentTransactionsGateway.uri=${PAYMENT_TRANSACTIONS_GATEWAY_URI}/
 paymentTransactionsGateway.readTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT}
 paymentTransactionsGateway.connectionTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT}
-ecommercePaymentInstruments.uri=${ECOMMERCE_PAYMENT_INSTRUMENTS_URI}/payment-methods/psps
+
+ecommercePaymentInstru
 ecommercePaymentInstruments.readTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT}
 ecommercePaymentInstruments.connectionTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT}
+
+notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
+notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
+notificationsService.connectionTimeout=${NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT}
+notificationsService.apiKey=${NOTIFICATIONS_SERVICE_API_KEY}
+
 spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/?ssl=false
 spring.data.mongodb.database=ecommerce
 
