--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -351,6 +351,7 @@ components:
             - IO
             - CHECKOUT
             - CHECKOUT_CART
+            - UNKNOWN
         authToken:
           type: string
       required:
