[CHK-866] cart post transaction (#98)
* feat: add parallel calls to nodo

* fix: code format

* feat: add environment variable for parallel request parameter

* fix: add scheduler parallel for chain nodo calls

* fix: misc fees

* fix: rptId

* fix: junit tests

* fix: add nodo response result log

* fix:removed unused Nodo transaction activation request logic

* fix: refactoring test name

* fix: address code review suggestions

* fix: address code review hints

* fix: restored unknown origin

* fix: code coverage

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -32,6 +32,7 @@ microservice-chart:
       NODOPERPM_CONNECTION_TIMEOUT: "10000"
       NODO_READ_TIMEOUT: "10000"
       NODO_CONNECTION_TIMEOUT: "10000"
+      NODO_PARALLEL_REQUESTS: "5"
       ECOMMERCE_SESSIONS_URI: https://api.uat.platform.pagopa.it/ecommerce/sessions-service/v1
       ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
       ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
@@ -134,6 +135,7 @@ microservice-chart:
     NODOPERPM_URI: /nodo/nodo-per-pm/v1/informazioniPagamento
     NODOPERPM_READ_TIMEOUT: "10000"
     NODOPERPM_CONNECTION_TIMEOUT: "10000"
+    NODO_PARALLEL_REQUESTS: "5"
     ECOMMERCE_SESSIONS_URI: https://api.uat.platform.pagopa.it/ecommerce/sessions-service/v1
     ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
