--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -36,10 +36,10 @@ microservice-chart:
       ECOMMERCE_SESSIONS_URI: https://api.uat.platform.pagopa.it/ecommerce/sessions-service/v1
       ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
       ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
-      ECOMMERCE_PAYMENT_INSTRUMENTS_URI: https://api.uat.platform.pagopa.it/ecommerce/payment-instruments-service/v1
+      ECOMMERCE_PAYMENT_INSTRUMENTS_URI: https://api.uat.platform.pagopa.it/ecommerce/payment-methods-service/v1
       ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT: "10000"
       ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT: "10000"
-      PAYMENT_TRANSACTIONS_GATEWAY_URI: http://pagopa-ecommerce-payment-instruments-service:8080
+      PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway/internal/v1
       PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
       PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
       NOTIFICATIONS_SERVICE_URI: https://api.uat.platform.pagopa.it/ecommerce/notifications-service/v1
@@ -150,8 +150,11 @@ microservice-chart:
     NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
+    TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: transactionclosuresentevents
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-activated-events-queue
-    PAYMENT_TOKEN_VALIDITY_TIME: "120"
+    PAYMENT_TOKEN_VALIDITY_TIME: "1800"
+    TRANSACTIONS_RETRY_OFFSET: "60"
+    CLOSURE_RETRY_INTERVAL: "30"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
