--- a/pom.xml
+++ b/pom.xml
@@ -515,8 +515,8 @@
                 <configuration>
                     <skipCheckoutIfExists>false</skipCheckoutIfExists>
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
-                    <scmVersionType>tag</scmVersionType>
-                    <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>CHK-907-commons-refactoring</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
