--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -10,7 +10,7 @@ paths:
       parameters:
         - in: header
           name: X-Client-Id
-          required: false
+          required: true
           description: Transaction origin (populated by APIM policy)
           schema:
             $ref: '#/components/schemas/ClientId'
@@ -356,7 +356,6 @@ components:
             - IO
             - CHECKOUT
             - CHECKOUT_CART
-            - UNKNOWN
         authToken:
           type: string
       required:
