--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -25,7 +25,8 @@ microservice-chart:
   service:
     create: true
     type: ClusterIP
-    port: 8080
+    ports:
+    - 8080
   ingress:
     create: true
     host: "weudev.ecommerce.internal.dev.platform.pagopa.it"
@@ -118,7 +119,15 @@ microservice-chart:
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
   nodeSelector: {}
   tolerations: []
-  affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: node_type
+                operator: In
+                values:
+                  - user
   canaryDelivery:
     deployment:
       image:
