--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -69,7 +69,8 @@ microservice-chart:
   livenessProbe:
     httpGet:
       path: /actuator/health/liveness
-      port: 8080
+      ports:
+      - 8080
     initialDelaySeconds: 80
     failureThreshold: 6
     periodSeconds: 10
@@ -176,4 +177,12 @@ microservice-chart:
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
   nodeSelector: {}
   tolerations: []
-  affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: node_type
+                operator: In
+                values:
+                  - user
