--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -392,6 +392,9 @@ components:
             mapping:
               postepay: "#/components/schemas/PostePayAuthRequestDetails"
               card: "#/components/schemas/CardAuthRequestDetails"
+        threeDsData:
+          type: string
+          description: three ds data evaluated from client
       required:
         - amount
         - fee
@@ -436,18 +439,23 @@ components:
         holderName:
           type: string
           description: The card holder name
+        brand:
+          type: string
+          description: The card brand name
       required:
         - detailType
         - cvv
         - pan
         - expiryDate
         - holderName
+        - brand
       example:
         detailType: "card"
         cvv: 000
         pan: 0123456789012345
         expiryDate: "209901"
         holderName: "Name Surname"
+        brand: "VISA"
     RequestAuthorizationResponse:
       type: object
       description: Response body for requesting an authorization for a transaction
