--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -101,7 +101,7 @@ stages:
           displayName: 'newman installation'
         - script: newman run api-tests/ecommerce-for-checkout/transaction-service/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/ecommerce-for-checkout/transaction-service/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/checkout-api-TEST.xml
           displayName: 'Run api test'
-          continueOnError: true 
+          continueOnError: false
         - task: PublishTestResults@2
           inputs:
             testResultsFormat: 'JUnit'
