--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -6,19 +6,23 @@
 
 parameters:
   - name: 'DEV_DEPLOY'
-    displayName: 'DEV deployment without release'
+    displayName: 'Deploy on DEV environment'
     type: boolean
     default: True
     values:
       - False
       - True
   - name: 'UAT_PROD_DEPLOY'
-    displayName: 'UAT blue/green deployment with release --> approval for PROD blue/green deployment'
+    displayName: 'Deploy on UAT environment with PROD promotion'
     type: boolean
     default: False
     values:
       - False
       - True
+  - name: 'skipBuild'
+    displayName: 'Check this flag to skip build and proceed to deploy a docker image previously built'
+    type: boolean
+    default: false
   - name: 'RELEASE_SEMVER'
     displayName: 'When packing a release, define the version bump to apply (release is done automatically when deploying on UAT and skipped on DEV) '
     type: string
@@ -27,7 +31,7 @@ parameters:
       - minor
       - patch
       - none
-    default: none
+    default: patch
   - name: 'RELEASE_CHART_SEMVER'
     displayName: 'When upgrading helm chart, define the version bump to apply'
     type: string
@@ -35,8 +39,7 @@ parameters:
       - major
       - minor
       - patch
-      - none
-    default: none
+    default: patch
   - name: "FORCE_REPLACE_DOCKER_IMAGE"
     displayName: "Force the existing docker image to be replaced (latest tag)"
     type: boolean
@@ -65,13 +68,6 @@ parameters:
     values:
       - False
       - True
-  - name: "UAT_SKIP_MANUAL_APPROVAL"
-    displayName: "Skip the UAT manual approval check"
-    type: boolean
-    default: True
-    values:
-      - False
-      - True
 resources:
   repositories:
     - repository: pagopaCommons
@@ -88,10 +84,12 @@ resources:
 pool:
   vmImage: ubuntu-latest
 
+# --- START Deploy DEV --- #
 stages:
+
   - stage: 'Build_for_DEV'
-    displayName: 'Build for DEV deployment'
-    condition: and(succeeded(), eq(${{parameters.DEV_DEPLOY}}, true))
+    displayName: 'Build for DEV'
+    condition: and(succeeded(), not(${{ parameters.skipBuild }}), eq(${{parameters.DEV_DEPLOY}}, true))
     jobs:
       - job: Build_docker
         displayName: Build docker with Build.SourceVersion as TAG
@@ -103,10 +101,11 @@ stages:
               DOCKER_IMAGE_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
               DOCKER_IMAGE_TAG: $(Build.SourceVersion)
               FORCE_REPLACE_DOCKER_IMAGE: ${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}
+
   - stage: 'Deploy_for_DEV'
     displayName: 'Deploy DEV'
     dependsOn: Build_for_DEV
-    condition: and(succeeded(), eq(${{parameters.DEV_DEPLOY}}, true) )
+    condition: or(succeeded(), ${{ parameters.skipBuild }}, eq(${{parameters.DEV_DEPLOY}}, true) )
     jobs:
       - deployment: "deploy"
         environment: 'DEV'
@@ -135,7 +134,7 @@ stages:
                     GREEN_VERSION: $(Build.SourceVersion)
 
   - stage: "API_DEV_test"
-    displayName: 'Running API test on blue app'
+    displayName: 'Running API test on dev app'
     dependsOn: Deploy_for_DEV
     jobs:
       - job: newman_api_test
@@ -145,25 +144,24 @@ stages:
             parameters:
               ENV_FILE: "api-tests/dev.envs.json"
               TEST_FILE_PREFIX: "dev"
+  # --- END Deploy DEV --- #
 
+  # --- START Deploy UAT --- #
   - stage: "Build_release_candidate"
     displayName: 'Build release candidate'
-    dependsOn: [ ]
+    dependsOn: []
     condition:
       and(
-       succeeded(),
-       eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-       or(
-         eq(variables['Build.SourceBranch'], 'refs/heads/main'),
-         and(
-          startsWith(variables['Build.SourceBranch'], 'refs/tags'),
-          endsWith(variables['Build.SourceBranch'], '-RELEASE')
-          )
+        succeeded(),
+        eq(${{parameters.UAT_PROD_DEPLOY}}, true),
+        or(
+          eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+          startsWith(variables['Build.SourceBranch'], 'refs/tags')
         )
-      )
+       )
     jobs:
       - job: "build"
-        displayName: 'Build UAT service beta'
+        displayName: 'Build release candidate docker image'
         steps:
           - template: templates/docker-release/template.yaml@pagopaCommons
             parameters:
@@ -183,7 +181,7 @@ stages:
       eq(${{parameters.UAT_SKIP_BLUE_DEPLOYMENT}}, False)
       )
     variables:
-      green_version: $[ stageDependencies.Build_release_candidate.build.outputs['chart_current_version.appVersion'] ]
+      green_app_version: $[ stageDependencies.Build_release_candidate.build.outputs['chart_current_version.appVersion'] ]
     jobs:
       - deployment: "Blue_deployment"
         displayName: "Blue deployment"
@@ -196,6 +194,7 @@ stages:
               steps:
                 - checkout: self
                   displayName: "Checkout"
+                - task: KubectlInstaller@0
                 - task: Bash@3
                   name: update_chart_version
                   displayName: 'Setup helm microservice chart'
@@ -213,10 +212,10 @@ stages:
                     NAMESPACE: ecommerce
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-uat.yaml"
-                    GREEN_VERSION: $(green_version)
+                    GREEN_VERSION: $(green_app_version)
                     BLUE_VERSION: $(Build.SourceVersion)
 
-  - stage: "Blue_API_UAT_test"
+  - stage: "API_Blue_UAT_test"
     displayName: 'Running API test on blue app'
     dependsOn: Deploy_UAT_Blue
     jobs:
@@ -230,8 +229,9 @@ stages:
 
   - stage: "Bluegreen_WaitForApproval"
     displayName: 'UAT green approval deployment'
-    dependsOn: Blue_API_UAT_test
-    condition: succeeded()
+    dependsOn: API_Blue_UAT_test
+    variables:
+      commitUrl: $[ stageDependencies.Build_release_candidate.build.outputs['chart_current_version.commitUrl'] ]
     jobs:
       - job: Bluegreen_WaitForApproval
         displayName: Manual blue deploy approval
@@ -241,14 +241,13 @@ stages:
           - task: ManualValidation@0
             timeoutInMinutes: 4320 # 3 days
             inputs:
-              onTimeout: 'skip'
-            condition: and(succeeded(), eq(${{parameters.UAT_SKIP_MANUAL_APPROVAL}}, False))
+              notifyUsers: $(APPROVE_TOUCHPOINT_MAIL)
+              instructions: "Please approve or reject UAT blue green promotions for $(commitUrl)"
+              onTimeout: 'reject'
 
   - stage: Release
     ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], True) }}:
       dependsOn: Build_release_candidate
-
-
     ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], False) }}:
       dependsOn: Bluegreen_WaitForApproval
       condition: succeeded()
@@ -270,19 +269,19 @@ stages:
                   semver: '${{ parameters.RELEASE_SEMVER }}'
           - template: azure-templates/chart-current-version.yml
 
-  - stage: "Release_tag_docker"
-    displayName: 'Docker tag release'
+  - stage: "tag_docker_release"
+    displayName: 'Tag Docker image to be release'
     dependsOn: Release
     condition:
       and(
       succeeded(),
-      eq(${{parameters.SKIP_RELEASE}}, False)
+      ne('${{parameters.RELEASE_SEMVER}}', 'none')
       )
     variables:
-      next_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     jobs:
       - job: "build"
-        displayName: 'Tag Docker Blue version UAT'
+        displayName: 'Build UAT service beta'
         steps:
           - task: Docker@2
             displayName: "docker login"
@@ -295,23 +294,20 @@ stages:
               targetType: "inline"
               script: |
                 docker pull $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
-                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(next_version)
-                docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(next_version)
+                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version)
+                docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version)
 
   - stage: "Deploy_UAT_Green"
     displayName: 'UAT green deployment'
-    dependsOn: [ Release_tag_docker,Release ]
+    dependsOn: [tag_docker_release,Release]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-        in(dependencies.Release_tag_docker.result, 'Succeeded', 'Skipped'),
+        in(dependencies.tag_docker_release.result, 'Succeeded', 'Skipped'),
         in(dependencies.Release.result, 'Succeeded', 'Skipped'),
         or(
           eq(variables['Build.SourceBranch'], 'refs/heads/main'),
-          and(
-            startsWith(variables['Build.SourceBranch'], 'refs/tags'),
-            endsWith(variables['Build.SourceBranch'], '-RELEASE')
-          )
+          startsWith(variables['Build.SourceBranch'], 'refs/tags')
         )
       )
     variables:
@@ -328,6 +324,7 @@ stages:
               steps:
                 - checkout: self
                   displayName: "Checkout"
+                - task: KubectlInstaller@0
                 - task: Bash@3
                   name: update_chart_version
                   displayName: 'Setup helm microservice chart'
@@ -347,7 +344,8 @@ stages:
                     VALUE_FILE: "helm/values-uat.yaml"
                     GREEN_VERSION: $(app_version)
 
-  - stage: "Green_API_UAT_test"
+
+  - stage: "API_Green_UAT_test"
     displayName: 'Running API test on green app'
     dependsOn: Deploy_UAT_Green
     jobs:
@@ -358,11 +356,12 @@ stages:
             parameters:
               ENV_FILE: "api-tests/uat.envs.json"
               TEST_FILE_PREFIX: "green-uat"
+  # --- END Deploy UAT --- #
 
   # --- START Deploy PROD --- #
   - stage: "Prod_WaitForApproval"
     displayName: 'PROD approval deployment'
-    dependsOn: [ Deploy_UAT_Green,Release ]
+    dependsOn: [Deploy_UAT_Green,Release]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
@@ -384,6 +383,7 @@ stages:
               instructions: "Please approve or reject PROD promotions for release $(release_url)"
               onTimeout: 'reject'
 
+  # --- START Deploy PROD --- #
   - stage: "Build_PROD_Blue"
     displayName: 'PROD blue Build'
     dependsOn: [ Prod_WaitForApproval,Release ]
@@ -410,8 +410,8 @@ stages:
             inputs:
               targetType: "inline"
               script: |
-                docker pull $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(prod_version)
-                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(prod_version) $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
+                docker pull $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version)
+                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version) $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
           - task: Docker@2
             displayName: "docker login for PROD"
             inputs:
@@ -425,7 +425,7 @@ stages:
                 docker push $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
   - stage: "Deploy_PROD_Blue"
     displayName: 'PROD blue deployment'
-    dependsOn: [ Build_PROD_Blue,Release ]
+    dependsOn: [Build_PROD_Blue,Release]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
@@ -490,12 +490,12 @@ stages:
             timeoutInMinutes: 4320 # 3 days
             inputs:
               notifyUsers: $(APPROVE_TOUCHPOINT_MAIL)
-              instructions: "Please approve or reject PROD green promotions v${prod_version}"
+              instructions: "Please approve or reject PROD green promotions for release $(release_url)"
               onTimeout: 'reject'
 
   - stage: "Build_PROD_Green"
     displayName: 'PROD green Build'
-    dependsOn: [ PROD_Green_WaitForApproval,Release ]
+    dependsOn: [PROD_Green_WaitForApproval,Release]
     variables:
       prod_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     condition: |
@@ -533,7 +533,7 @@ stages:
                 docker push $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(prod_version)
   - stage: "Deploy_PROD_Green"
     displayName: 'PROD green deployment'
-    dependsOn: [ Build_PROD_Green,Release ]
+    dependsOn: [Build_PROD_Green,Release]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
@@ -576,15 +576,20 @@ stages:
 
   # --- START ROLLBACK PROD --- #
   - stage: "Prod_RollbackForApproval"
-    displayName: 'PROD approval ROLLBACK'
-    dependsOn: [ Deploy_PROD_Green,Release ]
+    displayName: 'PROD ROLLBACK'
+    dependsOn: [Deploy_PROD_Green,Release]
+    condition: |
+      and(
+        eq(${{parameters.UAT_PROD_DEPLOY}}, true),
+        eq(dependencies.Deploy_PROD_Green.result, 'Succeeded'),
+        in(dependencies.Release.result, 'Succeeded', 'Skipped')
+      )
     variables:
       release_url: $[ stageDependencies.Release.make_release.outputs['chart_current_version.releaseUrl'] ]
     jobs:
       - job: Prod_Rollback_Approval
         displayName: Manual prod rollback approval
         pool: server
-        timeoutInMinutes: 30
         steps:
           - task: ManualValidation@0
             timeoutInMinutes: 30
@@ -594,7 +599,8 @@ stages:
               onTimeout: 'skip'
   - stage: "Prod_RollbackToLatestRelease"
     displayName: 'PROD rollback to the latest Release'
-    dependsOn: [ Prod_RollbackForApproval ]
+    dependsOn: [Prod_RollbackForApproval]
+    condition: succeeded()
     jobs:
       - job: Prod_Rollback
         pool:
@@ -611,4 +617,4 @@ stages:
               install: true
               waitForExecution: true
               arguments: $(K8S_IMAGE_REPOSITORY_NAME)
-  # --- START ROLLBACK PROD --- #
+# --- END ROLLBACK PROD --- #
