--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -73,6 +73,8 @@ microservice-chart:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
       NODO_CONNECTION_STRING: nodo-connection-string
+      NODO_CLOSEPAYMENT_API_KEY: nodo-nodeforpm-api-key
+      NODO_NODEFORPSP_API_KEY: nodo-nodeforpsp-api-key
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
       JWT_SECRET: sessions-jwt-secret
       PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
@@ -194,6 +196,8 @@ microservice-chart:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
+    NODO_CLOSEPAYMENT_API_KEY: nodo-nodeforpm-api-key
+    NODO_NODEFORPSP_API_KEY: nodo-nodeforpsp-api-key
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
     ECOMMERCE_STORAGE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
