--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -75,7 +75,7 @@ microservice-chart:
     REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
     REDIS_SSL_ENABLED: "true"
-    NODO_HOSTNAME: https://api.dev.platform.pagopa.it
+    NODO_HOSTNAME: https://api.uat.platform.pagopa.it
     NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
