--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -1149,6 +1149,8 @@ components:
         paymentEndToEndId:
           description: Circuit unique transaction ID
           type: string
+        rrn:
+          type: string
       required:
         - paymentGatewayType
         - operationResult
