--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -12,7 +12,7 @@ resources:
     - repository: pagopaEcommerceLocal
       type: github
       name: pagopa/pagopa-ecommerce-local 
-      ref: main
+      ref: CHK-1990-transaction-service-CR-tests
       endpoint: 'io-azure-devops-github-ro'
 
 stages:
@@ -92,15 +92,19 @@ stages:
             echo "##[debug] Change placeholder for ecommerce-transaction-service set branch: $(BRANCH_NAME)"
             sed -i "s/^ECOMMERCE_TRANSACTIONS_COMMIT_SHA=.*$/ECOMMERCE_TRANSACTIONS_COMMIT_SHA=$(BRANCH_NAME)/" .env
           displayName: 'Change transaction branch name ecommerce-local .env'
-        - script: docker compose up pagopa-ecommerce-transactions-service pagopa-ecommerce-payment-methods-service mongo redis storage pagopa-pdv-mock pagopa-gec-mock pagopa-npg-mock pagopa-node-mock traefik -d
+        - script: docker compose up pagopa-ecommerce-transactions-service pagopa-ecommerce-payment-methods-service mongo redis storage pagopa-pdv-mock pagopa-gec-mock pagopa-npg-mock pagopa-node-mock traefik pagopa-pgs-mock -d
           displayName: 'Run app with docker-compose'
         - script: |
               timeout 180 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:8080/actuator/health/liveness)" != "200" ]]; do sleep 5; done' || exit 1
           displayName: 'Health check'
         - script: yarn global add newman
           displayName: 'newman installation'
-        - script: newman run api-tests/transaction-service/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/transaction-service/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/checkout-api-TEST.xml
-          displayName: 'Run api test'
+        - script: newman run api-tests/transaction-service/npg/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/transaction-service/npg/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/NPG-api-TEST.xml
+          displayName: 'Run api test for NPG integration'
+        - script: newman run api-tests/transaction-service/pgs/vpos/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/transaction-service/pgs/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/PGS-VPOS-api-TEST.xml
+          displayName: 'Run api test for PGS VPOS integration'
+        - script: newman run api-tests/transaction-service/pgs/xpay/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/transaction-service/pgs/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/PGS-XPAY-api-TEST.xml
+          displayName: 'Run api test for XPAY integration'
           continueOnError: false
         - task: PublishTestResults@2
           inputs:
