--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -120,7 +120,7 @@ microservice-chart:
     NPG_URI: "https://stg-ta.nexigroup.com/api/phoenix-0.0"
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
-    NPG_CARDS_PSP_LIST: "BCITITMM"
+    NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019"
     CHECKOUT_BASE_PATH: "https://dev.checkout.pagopa.it"
     ECOMMERCE_EVENT_VERSION: "V1"
   envSecret:
