--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -147,6 +147,18 @@ stages:
             parameters:
               ENV_FILE: "api-tests/dev.envs.json"
               TEST_FILE_PREFIX: "dev"
+
+  - stage: "E2E_DEV_test"
+    displayName: 'Running E2E test on dev app'
+    dependsOn: Deploy_for_DEV
+    jobs:
+      - job: e2e_tests
+        steps:
+          - checkout: pagopaCheckoutTests
+          - template: azure-templates/e2e-tests.yaml@checkoutTests
+            parameters:
+              ENVIRONMENT: DEV
+              CHECKOUT_RESOURCE_REPO_NAME: checkoutTests
   # --- END Deploy DEV --- #
 
   # --- START Deploy UAT --- #
@@ -360,6 +372,18 @@ stages:
             parameters:
               ENV_FILE: "api-tests/uat.envs.json"
               TEST_FILE_PREFIX: "green-uat"
+
+  - stage: "E2E_UAT_green_test"
+    displayName: 'Running E2E test on uat app'
+    dependsOn: Deploy_UAT_Green
+    jobs:
+      - job: e2e_tests
+        steps:
+          - checkout: pagopaCheckoutTests
+          - template: azure-templates/e2e-tests.yaml@checkoutTests
+            parameters:
+              ENVIRONMENT: UAT
+              CHECKOUT_RESOURCE_REPO_NAME: checkoutTests
   # --- END Deploy UAT --- #
 
   # --- START Deploy PROD --- #
